# adk-agent-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  pyproject.toml
assets/: template.potx
src/adk_agent_test/: __init__.py  agent.py  config.py  cost_tracker.py  logging_config.py  main.py
src/adk_agent_test/tools/: _mockable.py  powerpoint.py  web.py
tests/: test_tools_powerpoint.py  test_tools_web.py
