[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_agent_test"]

[project]
name = "adk-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "openai>=2.19",
    "openai-agents>=0.9.0",
    "python-pptx>=0.6.21",
    "rich",
    "typer",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.1",
    "httpx>=0.28",
]

[project.scripts]
adk-agent-test = "adk_agent_test.main:app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that call real APIs (deselect with '-m \"not integration\"')",
]
